force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/clofor_com_cfs__OtherRevenueCost__c.object-meta.xml
<CustomObject>
    <label>Other</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>OTHER REVENUE &amp; COST ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>