force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__Account_code_Buying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_code_Buying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account code Buying</label>
    <referenceTo>clofor_com_cfs__Chart_of_Accounts__c</referenceTo>
    <relationshipLabel>Other (Account code Buying)</relationshipLabel>
    <relationshipName>Other1</relationshipName>
    <type>Lookup</type>
</CustomField>