force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__Account_code_Selling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_code_Selling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account code Selling</label>
    <referenceTo>clofor_com_cfs__Chart_of_Accounts__c</referenceTo>
    <relationshipLabel>Other</relationshipLabel>
    <relationshipName>Other</relationshipName>
    <type>Lookup</type>
</CustomField>