force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__AmountCollectedOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountCollectedOtherRevenue__c</fullName>
    <label>AMOUNT COLLECTED-OTHER REVENUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>