force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__AmountCollectedOtherRevenueText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountCollectedOtherRevenueText__c</fullName>
    <label>AMOUNT COLLECTED-OTHER REVENUE-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>