force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__AmountOtherCostIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOtherCostIncludeTaxUSD__c</fullName>
    <label>AMOUNT OTHER COST INCLUDE TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>