force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__AmountPaidOtherCostText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidOtherCostText__c</fullName>
    <label>AMOUNT PAID-OTHER COST-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>