force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__BankAccountOtherCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountOtherCost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-OTHER COST</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>OTHER COST</relationshipLabel>
    <relationshipName>OtherCost</relationshipName>
    <type>Lookup</type>
</CustomField>