force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__CostDifferenceText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CostDifferenceText__c</fullName>
    <label>COST DIFFERENCE-TEXT</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>