force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__DifferenceOtherCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DifferenceOtherCost__c</fullName>
    <formula>clofor_com_cfs__AmountOtherCostIncludeTax__c -  clofor_com_cfs__AmountPaidOtherCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference(Other Cost)=Total Amount of Oth Cost-Amount Paid-Oth Cost</inlineHelpText>
    <label>DIFFERENCE(OTHER COST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>