force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__DifferenceOtherCostUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DifferenceOtherCostUSD__c</fullName>
    <formula>clofor_com_cfs__AmountOtherCostIncludeTaxUSD__c -  clofor_com_cfs__AmountPaidOtherCostUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIFFERENCE-OTHER COST(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>