force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__Note__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Note__c</fullName>
    <label>NOTE</label>
    <type>TextArea</type>
</CustomField>