force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherCostCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherCostCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER COST CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER COST (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherCostCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>