force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherCostDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherCostDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER COST DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER COST (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherCostDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>