force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherCostVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherCostVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER COST VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER (OTHER COST VAT DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherCostVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>