force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherRevenueBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRevenueBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>OTHER REVENUE BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>