force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherRevenueCostName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRevenueCostName__c</fullName>
    <label>OTHER REVENUE/COST NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>