force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherRevenueCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRevenueCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER REVENUE CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER REVENUE (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherRevenueCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>