force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__OtherRevenueVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRevenueVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER REVENUE VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER (OTHER REVENUE VAT DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherRevenueVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>