force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__PaymentConfirmedOtherCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentConfirmedOtherCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-OTHER COST</label>
    <type>Checkbox</type>
</CustomField>