force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__PaymentToOtherCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentToOtherCost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYMENT TO-OTHER COST</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTHER COST</relationshipLabel>
    <relationshipName>OtherCost</relationshipName>
    <type>Lookup</type>
</CustomField>