force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__PreviousOtherCostIDForSplit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousOtherCostIDForSplit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS OTHER COST ID FOR SPLIT</label>
    <referenceTo>clofor_com_cfs__OtherRevenueCost__c</referenceTo>
    <relationshipLabel>NEXT OTHER FOR PAYMENT SPLIT</relationshipLabel>
    <relationshipName>OtherIDForSplit</relationshipName>
    <type>Lookup</type>
</CustomField>