force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__ReceiptanceConfirmedOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiptanceConfirmedOtherRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RECEIPTANCE CONFIRMED-OTHER REVENUE</label>
    <type>Checkbox</type>
</CustomField>