force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__ReceiptanceSettledDateOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiptanceSettledDateOtherRevenue__c</fullName>
    <label>RECEIPTANCE SETTLED DATE-OTHER REVENUE</label>
    <type>Date</type>
</CustomField>