force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__ReceiptanceTypeOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReceiptanceTypeOtherRevenue__c</fullName>
    <label>RECEIPTANCE TYPE-OTHER REVENUE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>