force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__ResourceNameForMailMerge__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ResourceNameForMailMerge__c</fullName>
    <formula>clofor_com_cfs__ResourceID__r.clofor_com_cfs__ResourceName__c</formula>
    <label>RESOURCE NAME FOR MAIL MERGE</label>
    <type>Text</type>
</CustomField>