force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__TaxRateCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TaxRateCost__c</fullName>
    <label>TAX RATE-COST(%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>