force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__TotalAmountOfOtherCostUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfOtherCostUSD__c</fullName>
    <label>TOTAL AMOUNT OF OTHER COST(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>