force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/clofor_com_cfs__TotalAmountOfOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfOtherRevenue__c</fullName>
    <label>TOTAL AMOUNT OF OTHER REVENUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>