force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <formula>clofor_com_cfs__ResourceID__r.clofor_com_cfs__ResourceName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>