force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/recordTypes/clofor_com_cfs__BankFee.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BankFee</fullName>
    <active>false</active>
    <description>Bank Transaction Fee</description>
    <label>Bank Fee</label>
</RecordType>