force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/recordTypes/clofor_com_cfs__BankFeeUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BankFeeUSDCurrency</fullName>
    <active>false</active>
    <label>Bank Fee-USD Currency</label>
</RecordType>