force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/recordTypes/clofor_com_cfs__OtherCost.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OtherCost</fullName>
    <active>true</active>
    <label>Other Cost</label>
</RecordType>