force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/recordTypes/clofor_com_cfs__OtherCostUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OtherCostUSDCurrency</fullName>
    <active>true</active>
    <label>Other Cost-USD Currency</label>
</RecordType>