force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/recordTypes/clofor_com_cfs__OtherRevenue.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OtherRevenue</fullName>
    <active>true</active>
    <label>Other Revenue</label>
</RecordType>