force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/recordTypes/clofor_com_cfs__OtherRevenueUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OtherRevenueUSDCurrency</fullName>
    <active>true</active>
    <label>Other Revenue-USD Currency</label>
</RecordType>