force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__OtherRevenueCostName__c</columns>
    <columns>clofor_com_cfs__ResourceID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__ChargeUnit__c</columns>
    <columns>clofor_com_cfs__AmountCollectedOtherRevenue__c</columns>
    <columns>clofor_com_cfs__CollectedFromOtherRevenue__c</columns>
    <columns>clofor_com_cfs__ReceiptanceSettledDateOtherRevenue__c</columns>
    <columns>clofor_com_cfs__AmountPaidOtherCost__c</columns>
    <columns>clofor_com_cfs__PaymentToOtherCost__c</columns>
    <columns>clofor_com_cfs__PaymentSettledDateOtherCost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>