force-app/main/default/objects/clofor_com_cfs__OtherRevenueCost__c/listViews/clofor_com_cfs__Cost.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Cost</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__OtherRevenueCostName__c</columns>
    <columns>clofor_com_cfs__ResourceNameForMailMerge__c</columns>
    <columns>clofor_com_cfs__TaxRateCost__c</columns>
    <columns>clofor_com_cfs__PaymentToOtherCost__c</columns>
    <columns>clofor_com_cfs__ChargeUnit__c</columns>
    <columns>clofor_com_cfs__TotalAmountOfOtherCost__c</columns>
    <columns>clofor_com_cfs__AmountOfTaxOtherCost__c</columns>
    <columns>clofor_com_cfs__AmountOtherCostIncludeTax__c</columns>
    <columns>clofor_com_cfs__AmountPaidOtherCost__c</columns>
    <columns>clofor_com_cfs__PaymentSettledDateOtherCost__c</columns>
    <columns>clofor_com_cfs__DifferenceOtherCost__c</columns>
    <columns>clofor_com_cfs__Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__OtherRevenueCost__c.clofor_com_cfs__OtherCost</value>
    </filters>
    <label>Cost</label>
    <language>en_US</language>
</ListView>